# planning_interfaces

./: README.md  checks_8h_source.html  dir_183afe8666ac30540abbd5d5442204d6.html  dir_4bf956a5150b7fcba7fc3503536c07f3.html  dir_9f98ba5f6571577afb46f0be9909eb57.html  dir_f5a69a6f8308cc8fcf3ffe8901313642.html  files.html  impl_2trajectory__access_8h_source.html  index.html  init_8h_source.html  namespaces.html  namespacetrajectory__planning__msgs.html  state__getters_8h_source.html  state__index_8h_source.html  state__setters_8h_source.html  trajectory__access_8h_source.html  trajectory__access_8hpp_source.html  utils_8h_source.html
.github/workflows/: doc.yml  downstream_projects.yml  industrial_ci.yml
assets/: route_planning_msgs.pptx
doc/: Doxyfile
route_planning_msgs/: CMakeLists.txt  package.xml
route_planning_msgs/action/: PlanRoute.action
route_planning_msgs/msg/: DrivableSpaceElement.msg  LaneBoundary.msg  LaneElement.msg  LaneSeparatorType.msg  RegulatoryElement.msg  RegulatoryElementType.msg  Route.msg  RouteElement.msg
route_planning_msgs_rviz_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
route_planning_msgs_rviz_plugins/include/route_planning_msgs/displays/route/: new_route_display.hpp  route_display.hpp
route_planning_msgs_rviz_plugins/include/route_planning_msgs/tools/route/: plan_route_tool.hpp  ref_path_tool.hpp
route_planning_msgs_rviz_plugins/src/displays/route/: new_route_display.cpp  route_display.cpp
route_planning_msgs_rviz_plugins/src/tools/route/: plan_route_tool.cpp  ref_path_tool.cpp
route_planning_msgs_utils/: CMakeLists.txt  package.xml
route_planning_msgs_utils/include/route_planning_msgs_utils/: route_access.h  route_access.hpp  route_getters.h  route_setters.h
route_planning_msgs_utils/include/route_planning_msgs_utils/impl/: route_access.h  route_getters.h  route_setters.h  utils.h
route_planning_msgs_utils/src/route_planning_msgs_utils/: __init__.py  route_getters.py  route_setters.py  utils.py
route_planning_msgs_utils/test/: test_route_access.cpp  test_route_access.py  test_route_access.ros2.cpp
route_planning_msgs_utils/test/impl/: test_route_access.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js
tf2_route_planning_msgs/: CMakeLists.txt  package.xml
tf2_route_planning_msgs/include/tf2_route_planning_msgs/: tf2_route_planning_msgs.hpp
tf2_route_planning_msgs/src/tf2_route_planning_msgs/: __init__.py  tf2_route_planning_msgs.py
tf2_route_planning_msgs/test/: test_tf2_route_planning_msgs.cpp  test_tf2_route_planning_msgs.py
tf2_trajectory_planning_msgs/: CMakeLists.txt  package.xml
tf2_trajectory_planning_msgs/include/tf2_trajectory_planning_msgs/: tf2_trajectory_planning_msgs.h  tf2_trajectory_planning_msgs.hpp
tf2_trajectory_planning_msgs/include/tf2_trajectory_planning_msgs/impl/: tf2_trajectory_planning_msgs.h
tf2_trajectory_planning_msgs/src/tf2_trajectory_planning_msgs/: __init__.py  tf2_trajectory_planning_msgs.py
tf2_trajectory_planning_msgs/test/: test_tf2_trajectory_planning_msgs.cpp  test_tf2_trajectory_planning_msgs.py  test_tf2_trajectory_planning_msgs.ros2.cpp
tf2_trajectory_planning_msgs/test/impl/: test_tf2_trajectory_planning_msgs.cpp
trajectory_planning_msgs/: CMakeLists.txt  package.xml
trajectory_planning_msgs/msg/: DRIVABLE.msg  DRIVABLERWS.msg  REFERENCE.msg  Trajectory.msg
trajectory_planning_msgs_rviz_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
trajectory_planning_msgs_rviz_plugins/include/trajectory_planning_msgs/displays/: trajectory_display.hpp
trajectory_planning_msgs_rviz_plugins/src/displays/: trajectory_display.cpp
trajectory_planning_msgs_utils/: CMakeLists.txt  package.xml
trajectory_planning_msgs_utils/include/trajectory_planning_msgs_utils/: trajectory_access.h  trajectory_access.hpp
trajectory_planning_msgs_utils/include/trajectory_planning_msgs_utils/impl/: checks.h  init.h  state_getters.h  state_index.h  state_setters.h  trajectory_access.h  utils.h
trajectory_planning_msgs_utils/src/trajectory_planning_msgs_utils/: __init__.py  checks.py  init.py  state_getters.py  state_index.py  state_setters.py  utils.py
trajectory_planning_msgs_utils/test/: test_trajectory_access.cpp  test_trajectory_access.py  test_trajectory_access.ros2.cpp
trajectory_planning_msgs_utils/test/impl/: test_trajectory_access.cpp
