<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>route_planning_msgs_rviz_plugins</name>
  <version>0.0.0</version>
  <description>This package provides rviz displays and tools for the route_planning_msgs</description>
  <maintainer email="guido.kueppers@rwth-aachen.de">Guido Küppers</maintainer>
  <author email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</author>
  <author email="guido.kueppers@rwth-aachen.de">Guido Küppers</author>
  <license>MIT</license>

  <depend>geometry_msgs</depend>
  <depend>ros_environment</depend>
  <depend>std_msgs</depend>
  <depend>route_planning_msgs</depend>

  <!-- ROS2 -->
  <depend condition="$ROS_VERSION == 2">tf2</depend>
  <depend condition="$ROS_VERSION == 2">tf2_geometry_msgs</depend>
  <depend condition="$ROS_VERSION == 2">tf2_ros</depend>

  <build_depend condition="$ROS_VERSION == 2">qtbase5-dev</build_depend>
  <build_depend condition="$ROS_VERSION == 2">rviz_ogre_vendor</build_depend>

  <build_export_depend condition="$ROS_VERSION == 2">rviz_ogre_vendor</build_export_depend>

  <exec_depend condition="$ROS_VERSION == 2">libqt5-core</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">libqt5-gui</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">libqt5-opengl</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">libqt5-widgets</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rviz_ogre_vendor</exec_depend>

  <depend condition="$ROS_VERSION == 2">pluginlib</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rviz_common</depend>
  <depend condition="$ROS_VERSION == 2">rviz_default_plugins</depend>
  <depend condition="$ROS_VERSION == 2">rviz_rendering</depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <!-- ROS1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">message_generation</depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
  </export>
</package>
