<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf2_route_planning_msgs</name>
  <version>0.0.0</version>
  <description>tf2-support for route_planning_msgs</description>
  <maintainer email="guido.kueppers@rwth-aachen.de">Guido Küppers</maintainer>
  <author email="jean-pierre.busch@rwth-aachen.de">Jean-Pierre Busch</author>
  <author email="guido.kueppers@rwth-aachen.de">Guido Küppers</author>
  <license>MIT</license>

  <depend>geometry_msgs</depend>
  <depend>ros_environment</depend>
  <depend>route_planning_msgs</depend>
  
  <!-- ROS2 -->
  <exec_depend condition="$ROS_VERSION == 2">tf2_ros_py</exec_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_pytest</test_depend>
  <depend condition="$ROS_VERSION == 2">tf2</depend>

  <!-- ROS1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
  </export>
</package>
